[package]
name = "sysbar"
version = "0.1.0"
authors = [
    "John Quigley <jmquigs@gmail.com>",
    "Corey Farwell <coreyf@rwell.org>",
]
description = "Library for interacting with the system's taskbar / tray / statusbar "
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-sysbar/rust-sysbar"

[dependencies]
log = "0.4"

[target.'cfg(windows)'.dependencies]
font8x8 = "0.2"
winapi = { version = "0.3", features = ["everything"] }

[target.x86_64-apple-darwin.dependencies]
cocoa = "0.20"
objc = "0.2"
core-graphics = "0.19.0"
objc-foundation = "0.1"
objc_id = "0.1"
libc = "0.2"
